--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
+<!-- Main Header Section of Page -->
 <div>
-	<h1>Discover hidden places in the world around you</h1>
+	<h1 class="tophat">Discover hidden places in the world around you</h1>
 </div>
 
 </body>
