Initial version of page complete.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,50 @@
 <html>
 <head>
 	<title>Excursion</title>
-	<link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+	<link href="./resources/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
 <!-- Main Header Section of Page -->
 <div>
 	<h1 class="tophat">Discover hidden places in the world around you</h1>
+</div>
+
+<!-- Link Section -->
+<div>
+	<p>
+		<a class="dload" href="#">Download Excursion (Coming soon!)</a>
+	</p>
+</div>
+
+<!-- Video section -->
+<div>
+	<video autoplay="true" muted="true" loop="true">
+		<source src="./resources/excursion.mp4" type="video/mp4">
+	</video>
+</div>
+
+<!-- Details Section -->
+<div>
+	<h2>Your personal travel guide</h2>
+	<p class="summary">Excursion remembers places you like, and recommends new points of interest around you.</p>
+	<p>
+		<img src="./resources/camp.jpg">
+	</p>
+	<p>
+		<img src="./resources/phone.png">
+	</p>
+	<p>
+		<h2> Coming Soon for iPhone and Android</h2>
+	</p>
+	<p>
+		<a class="dload" href="#">Download Excursion (Coming soon!)</a>
+	</p>
+</div>
+
+<!-- Footer Section -->
+<div class="footer">
+	<p>© Excursion</p>
 </div>
 
 </body>
