Cleaned up html and added additional comments

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
+<!-- head section -->
 <head>
 	<title>Excursion</title>
 	<link href="./resources/style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
 
 <!-- Main Header Section of Page -->
 <div>
 	<h1 class="tophat">Discover hidden places in the world around you</h1>
-</div>
-
-<!-- Link Section -->
-<div>
 	<p>
 		<a class="dload" href="#">Download Excursion (Coming soon!)</a>
 	</p>
@@ -28,7 +26,9 @@
 <!-- Details Section -->
 <div>
 	<h2>Your personal travel guide</h2>
-	<p class="summary">Excursion remembers places you like, and recommends new points of interest around you.</p>
+	<p class="summary">
+		Excursion remembers places you like, and recommends new points of interest around you.
+	</p>
 	<p>
 		<img src="./resources/camp.jpg">
 	</p>
@@ -49,4 +49,5 @@
 </div>
 
 </body>
+
 </html>
